# remote-worker

./: README.md  notice.txt
install/: local_setup.sh  setup.sh
install/ik_solver/share/ik_solver/: package.bash  package.sh  package.zsh
install/roarm_bringup/share/roarm_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/roarm_description/share/roarm_description/: package.sh
install/roarm_driver/share/roarm_driver/: package.sh
install/roarm_moveit/share/roarm_moveit/: package.sh
install/roarm_moveit_ikfast_plugins/share/roarm_moveit_ikfast_plugins/: package.sh
install/sirius_reader/lib/sirius_reader/: sirius_reader
install/sirius_reader/share/sirius_reader/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/ik_solver/: package.xml  setup.py
src/ik_solver/ik_solver/: ik_solver.py
src/roarm_bringup/: README.md  package.xml  setup.cfg  setup.py
src/roarm_bringup/launch/: bringup.launch.py
src/roarm_description/launch/: display.launch.py
src/roarm_description/meshes/: roarm_description.xml
src/roarm_driver/: setup.py
src/roarm_driver/launch/: demo.launch.py
src/roarm_driver/roarm_driver/: roarm_driver.py
src/roarm_moveit/launch/: demo.launch.py  interact.launch.py
src/sirius_reader/: package.xml  setup.cfg  setup.py
src/sirius_reader/sirius_reader/: sirius_reader.py
