<?xml version="1.0"?>
<package format="3">
  <name>roarm_bringup</name>
  <version>0.1.0</version>
  <description>Launch file collection for bringing up ROARM system (MoveIt, IK, sensors, driver)</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>roarm_description</exec_depend>
  <exec_depend>roarm_moveit</exec_depend>
  <exec_depend>roarm_moveit_ikfast_plugins</exec_depend>
  <exec_depend>ik_solver</exec_depend>
  <exec_depend>sirius_reader</exec_depend>
  <exec_depend>roarm_driver</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

